--- a/signup.html
+++ b/signup.html
@@ -95,13 +95,13 @@
                 </div>
                 <div class="input-group">
                     <label class="input-label">Last Name</label>
-                    <input type="text" id="su-lname" class="auth-input" placeholder="Doe" required>
+                    <input type="text" id="su-lname" class="auth-input" placeholder="Smith" required>
                 </div>
             </div>
 
             <div class="input-group">
                 <label class="input-label">Unique Username</label>
-                <input type="text" id="su-username" class="auth-input" placeholder="Slayer99" required>
+                <input type="text" id="su-username" class="auth-input" placeholder="DrJohnSmith" required>
             </div>
 
             <div class="input-group">
